--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,10 +88,13 @@ ul.dropdown-menu li.disabled a {
     }
 }
 
+
 ngx-datatable {
     border-radius: 3px 3px 0 0 !important;
     box-shadow: 0 2px 2px rgba(204, 197, 185, 0.5) !important;
 }
+
+/** ########### NGX-DATATABLE ########### **/
 
 datatable-body-row:hover {
     cursor: pointer;
@@ -105,4 +108,8 @@ datatable-body-row:hover {
 .empty-row {
     text-align: center !important;
     margin-top: 20px;
+}
+
+.datatable-body-cell-label {
+    font-weight: 300;
 }
