Add generate documentation interface

--- a/src/app/auth/proposals/details/internship-proposal-details.component.html
+++ b/src/app/auth/proposals/details/internship-proposal-details.component.html
@@ -109,7 +109,7 @@
 
 
                             <button *ngIf="internshipProposal.status === InternshipProposalStatusType.Ended" type="button" class="btn btn-success pull-right"
-                                (click)="printDocs()">{{'Dictionary.PrintDocs' | translate}}</button>
+                                (click)="generateDocs()">{{'Dictionary.GenerateDocs' | translate}}</button>
                         </div>
                     </div>
                 </div>
