--- a/src/app/auth/proposals/track/internship-proposal-track.component.html
+++ b/src/app/auth/proposals/track/internship-proposal-track.component.html
@@ -73,6 +73,38 @@
                         </div>
                     </div>
                 </div>
+
+
+
+                <div class="card" *ngIf="internshipProposal">
+                    <div class="card-header">
+                        <h4 class="card-title">
+                            {{'Dictionary.CurrentState' | translate}}
+                        </h4>
+                    </div>
+                    <div class="card-content">
+                        <div class="row form-group">
+                            <div class="col-md-6">
+                                <label translate>Dictionary.RealStartDate</label>
+                                <p class="form-control-static" *ngIf="internshipProposal.startDate">{{internshipProposal.startDate | date}}</p>
+                                <p class="form-control-static" *ngIf="!internshipProposal.startDate" translate>Dictionary.NotSpecified</p>
+                            </div>
+                            <div class="col-md-6">
+                                <label translate>Dictionary.RealEndDate</label>
+                                <p class="form-control-static" *ngIf="internshipProposal.endDate">{{internshipProposal.endDate | date}}</p>
+                                <p class="form-control-static" *ngIf="!internshipProposal.endDate" translate>Dictionary.NotSpecified</p>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-12">
+                                <label translate>Dictionary.RemainingHours</label>
+                                <p class="form-control-static" *ngIf="!internshipProposal.internship.totalHours; else remainingHours">{{'Dictionary.NotSpecified' | translate}}</p>
+                                <p class="form-control-static" remainingHours>{{internshipProposal.internship.totalHours - totalHours > 0 ? internshipProposal.internship.totalHours - totalHours : 0}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <attendances-cmp [internshipProposal]="internshipProposal"></attendances-cmp>
 
                 <div class="card" *ngIf="internshipProposal">
